Joo's change - adding animated front buttons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--<script language="javascript" src="../addons/p5.sound.js"></script>-->
     <script language="javascript" type="text/javascript" src="sketch.js"></script>
     <!-- ADD extra js files below here-->
+    <script language="javascript" type="text/javascript" src="modules/Intro.js"></script>
     <script language="javascript" type="text/javascript" src="modules/OpenClose.js"></script>
     <script language="javascript" type="text/javascript" src="modules/Bird.js"></script>
     <script language="javascript" type="text/javascript" src="modules/Planetary.js"></script>
