--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script language="javascript" type="text/javascript" src="modules/Intro.js"></script>
     <script language="javascript" type="text/javascript" src="modules/OpenClose.js"></script>
     <script language="javascript" type="text/javascript" src="modules/Bird.js"></script>
+    <script language="javascript" type="text/javascript" src="modules/Walk.js"></script>
     <script language="javascript" type="text/javascript" src="modules/Planetary.js"></script>
 	  <script language="javascript" type="text/javascript" src="modules/turtle.js"></script>
     <script language="javascript" type="text/javascript" src="UI.js"></script>
