--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
+    <script src="libraries/p5.svg.js" type="text/javascript"></script>
+    <script src="libraries/p5.pdf.js" type="text/javascript"></script>
     <!--script language="javascript" type="text/javascript" src="../p5.js"></script-->
     <!-- uncomment lines below to include extra p5 libraries -->
   	<!--<script language="javascript" src="../addons/p5.dom.js"></script>-->
